unpackaged/main/default/objects/srlg_Address__c/srlg_Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>