unpackaged/main/default/objects/srlg_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>