unpackaged/main/default/objects/srlg_Address__c/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <label>Client Address</label>
    <type>Address</type>
</CustomField>