unpackaged/main/default/objects/srlg_Address__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exposure</label>
    <referenceTo>srlg_Exposure__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>