unpackaged/main/default/objects/srlg_Address__c/fields/Fx_Category__c.field-meta.xml
<CustomField>
    <fullName>Fx_Category__c</fullName>
    <description>This is used to say what this address was used for.</description>
    <formula>IF(
    NOT(ISBLANK(Injured_Party__c)),
    &quot;Injured Party&quot;,
    IF(
        NOT(ISBLANK(Client__c)),
        &quot;Client&quot;,
        &quot;Unknown&quot;
    )
)</formula>
    <inlineHelpText>This is used to say what this address was used for.</inlineHelpText>
    <label>Fx Category</label>
    <type>Text</type>
</CustomField>