unpackaged/main/default/objects/srlg_Address__c/fields/Fx_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Fx_Street_1__c</fullName>
    <formula>IF(
CONTAINS(Client_Address__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
LEFT(
Client_Address__Street__s,
FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Client_Address__Street__s)
),
Client_Address__Street__s
)</formula>
    <label>Fx Street 1</label>
    <type>Text</type>
</CustomField>