unpackaged/main/default/objects/srlg_Address__c/fields/Fx_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Fx_Street_2__c</fullName>
    <formula>IF(
CONTAINS(Client_Address__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
RIGHT(
Client_Address__Street__s,
(LEN(Client_Address__Street__s) - FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Client_Address__Street__s))
),
&quot;&quot;
)</formula>
    <label>Fx Street 2</label>
    <type>Text</type>
</CustomField>