unpackaged/main/default/objects/srlg_Address__c/fields/Injured_Party__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Injured Party</label>
    <referenceTo>srlg_Injured_Party__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>