unpackaged/main/default/objects/srlg_Address__c/fields/Is_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Is_Mailing__c</fullName>
    <label>Is Mailing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>