unpackaged/main/default/objects/srlg_Address__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>