unpackaged/main/default/objects/srlg_Address__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this address is the primary address for the related record.</description>
    <inlineHelpText>Select this checkbox to designate this address as the primary address for the record. Only one address should be marked as primary per record. Use this to identify the main address used for correspondence, or other primary communications.</inlineHelpText>
    <label>Primary Address</label>
    <type>Checkbox</type>
</CustomField>