unpackaged/main/default/objects/srlg_Address__c/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <description>DO NOT USE</description>
    <inlineHelpText>DO NOT USE</inlineHelpText>
    <label>DEPRECATED Street1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>