unpackaged/main/default/objects/srlg_Address__c/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <inlineHelpText>DO NOT USE</inlineHelpText>
    <label>DEPRECATED Street2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>