unpackaged/main/default/objects/srlg_Address__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>