unpackaged/main/default/objects/srlg_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Primary_Address__c</columns>
    <columns>Is_Mailing__c</columns>
    <columns>Is_Residence__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Intake__c</columns>
    <columns>Client__c</columns>
    <columns>Injured_Party__c</columns>
    <columns>Exposure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>